--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,63 @@
 div{
     position: relative;
     left: 800px;
-    top: 280px;
+    top: 260px;
     
     
+}
+
+.searchButton{
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16 0 16;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 4px;
+}
+
+.lucky{
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .searchBar{
     box-sizing: content-box;
     display:flex;
-    float: none;
-    line-height: normal;
-    position: static;
-    z-index: auto;
     background-color: transparent;
     width: 527px;
+    height: 40px;
+    margin: 10;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    margin-left: -130px;
+    margin-top: 30px;
     height: 34px;
-    margin: 0;
-    margin-top: 10px;
+    font-size: 16px;
+    outline: none;
+    border-radius: 33px;
     
 }
+
+
 
 .googleLogo{
     box-sizing: content-box;
